--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Work+Sans:300,400"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="img/pa.jpg" />
     <link rel="stylesheet" href="style/style.css" />
   </head>
 
@@ -44,8 +44,8 @@
           <span data-node-name="text4"
             >I realised, I wanted to do something</span
           >
-          <strong data-node-name="text4Adjective">special</strong>.
-          <span data-node-name="text4"> hơn</span>
+          <strong data-node-name="text4Adjective">special</strong>
+          <span data-node-name="text4"> hơn</span>.
         </p>
         <p class="idea-4" data-node-name="text5Entry">Because,</p>
         <p class="idea-5">
