--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@
           Or click, if you want to watch it again.
         </p>
         <p class="last-smile" data-node-name="outroSmiley">:)</p>
+        <p class="credit">
+          Thật ra t ko tự code hết đâu, chỉ xào nấu lại dựa trên 1 project nào
+          đó của 1 anh Ấn Độ 🇮🇳 đẹp zai nào đó thôi :v. Cảm ơn a zai nhiều!
+        </p>
       </div>
     </div>
   </body>
