--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Happy Birthday!!! :)</title>
+    <title>HPBD PA 🇨🇦</title>
     <link
       href="https://fonts.googleapis.com/css?family=Work+Sans:300,400"
       rel="stylesheet"
